# dorna_vision

./: .gitignore  MANIFEST.in  README.md  README_V2.md  pyproject.toml  requirements.txt  setup.py
docs/: detection_model_training.md  ml_training_guide.md
dorna_vision/: RealSense Frameset 22.bag  __init__.py  ai.py  board.py  calibrate-test.py  calibrate.py  calibrate_test.py  calibration  calibration.py  conversion.py  data.pkl  data_0.pkl  data_2.pkl  data_3.pkl  data_bad.pkl  data_test.pkl  detect.py  draft.ipynb  draft_backup.ipynb  draft_calibration copy.ipynb  draft_calibration.ipynb  draw.py  find.py  grasp.py  gui.py  limit.py  main.ipynb  minimizer.py  pose.py  sort.py  test.bag22.bag  test22.bag  test_data.txt  test_data2.txt  util.py  visual.py
dorna_vision-client/: README.md  pyproject.toml
dorna_vision-client/dorna_vision_client/: __init__.py
dorna_vision/example/: vision_guide.ipynb  vision_guide.py
dorna_vision/model/ocr/: horizontal-text-detection-0001.xml
dorna_vision/notebook/: gui.ipynb  vision_guide.ipynb
dorna_vision/server/: __init__.py  __main__.py  app.py  handlers.py  mqtt_adapter.py  mqtt_relay.py  pools.py  session.py  ws_handler.py
dorna_vision/server/web/: index.html
dorna_vision/server/web/static/: style.css
dorna_vision/server/web/static/js/: api.js  cameras.js  main.js  playground.js
example/: api_call.ipynb  camera_robot_calibration.ipynb  detection_api.ipynb  detection_app.ipynb  detection_gui.ipynb  ocr.ipynb  pattern_detection.ipynb  vision_guide.ipynb  vision_guide_yolo.ipynb  vision_guide_yolo_v8.ipynb  yolo_v4.ipynb  yolo_v8.ipynb
tests/: test_mqtt_adapter.py  test_mqtt_relay.py
vision/: __init__.py  board.py  detect.py  gui.ipynb  gui.py  main.ipynb  util.py
vision/config/: test.json
